# smart-contract-learning

./: .gitignore  README.md
SimpleStorage/: Cargo.toml  README.md
SimpleStorage/src/: simple_storage.rs
cross-contract-calls/: Cargo.toml  README.md  lib.rs
cross-contract-calls/other-contract/: Cargo.toml  lib.rs
custom-environment/: Cargo.toml  README.md  lib.rs
erc-20/: README.md
erc_20/: Cargo.toml  lib.rs
flipper/: README.md  lib.rs
incrementer/: Cargo.toml  README.md  lib.rs
simple-storage/: README.md
simple-storage/src/: main.rs
trait-erc-20/: Cargo.toml  README.md  lib.rs
upgradeable-contracts/: README.md
upgradeable-contracts/delegate/: Cargo.toml  README.md  lib.rs
upgradeable-contracts/delegate/delegatee/: Cargo.toml  lib.rs
upgradeable-contracts/proxy/: Cargo.toml  README.md  lib.rs
upgradeable-contracts/set-code-hash/: Cargo.toml  README.md  lib.rs
upgradeable-contracts/set-code-hash/incrementer2/: Cargo.toml  lib.rs
