[package]
name = "trait_erc_20"
version = "0.1.0"
authors = ["Emil Tsanev"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

# Note: We **need** to specify the `ink-as-dependency` feature.
#
# If we don't we will end up with linking errors!
# base-erc20 = { path = "base_erc20", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",

    # Note: The metadata generation step requires `std`. If we don't specify this the metadata
    # generation for our contract will fail!
    # "base-erc20/std",
]
ink-as-dependency = []
e2e-tests = []
